update broadcast time from 5 to 2 seconds and add room id in case of custom room

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Tic-Tac-Two: A modern take on the classic game"
+      content="tic-tac-two: a modern take on the classic game"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo128.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="%PUBLIC_URL%/logo128.png" />
@@ -15,11 +15,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="author" content="athrv.k" />
-    <meta name="og:title" content="Tic-Tac-Two" />
-    <meta name="og:description" content="A modern take on the classic game" />
+    <meta name="og:title" content="tic-tac-two" />
+    <meta name="og:description" content="a modern take on the classic game" />
     <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
     <meta name="og:url" content="https://github.com/athrvk/" />
-    <title>Tic-Tac-Two</title>
+    <title>tic-tac-two</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
