--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo128.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="tic-tac-two: a modern take on the classic game"
-    />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo128.png" />
-    <link rel="icon" type="image/png" sizes="128x128" href="%PUBLIC_URL%/logo128.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="author" content="athrv.k" />
-    <meta name="og:title" content="tic-tac-two" />
-    <meta name="og:description" content="a modern take on the classic game" />
-    <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
-    <meta name="og:url" content="https://github.com/athrvk/" />
-    <title>tic-tac-two</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo128.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="tic-tac-two: a modern take on the classic game" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo128.png" />
+  <link rel="icon" type="image/png" sizes="128x128" href="%PUBLIC_URL%/logo128.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/logo32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/logo16.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="author" content="athrv.k" />
+  <meta name="og:title" content="tic-tac-two" />
+  <meta name="og:description" content="a modern take on the classic game" />
+  <meta name="og:image" content="%PUBLIC_URL%/logo512.png" />
+  <meta name="og:url" content="https://github.com/athrvk/" />
+  <title>tic-tac-two</title>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2J74SW2VZC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-2J74SW2VZC');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
